Controller déplacer dans OffreStageController et ajout de son test unitaire